# PGP

./: .gitignore
Lab01/: Lab01.sln  Lab01.vcxproj  common_defines.cuh  common_structures.cuh  cpu_realization.cpp  kernel.cu  makefile.txt
Lab01/doc/: report.tex
Lab01/doc/src/: benchmark.tex  specs.tex  src.tex
Lab01/src/cpu/: CMakeLists.txt  cpu_realization.cpp
Lab01/src/gpu/: common_defines.cuh  common_structures.hpp  makefile  os.cu  os.cuh
Lab01/src/tools/: benchmark.py  builder.py  checker.py  main.py  test_generator.py
Lab01/tools/: .gitignore  benchmark.py  builder.py  main.py  test_generator.py
Lab01Report/src/: benchmark.tex  src.tex  thinks.tex
Lab02/doc/src/: problem.tex  thinks.tex
Lab02/src/GPU/: Lab02.vcxproj  makefile  os.cu
Lab02/src/tools/: builder.py  checker.py
doc/CP/: report.tex
doc/CP/src/: benchmark.tex  literature.tex  problem.tex  specs.tex  src.tex  thinks.tex  titlepage.tex
doc/Lab01/: .gitignore
doc/Lab01/src/: literature.tex  problem.tex  thinks.tex  titlepage.tex
doc/Lab02/: report.tex
doc/Lab02/src/: benchmark.tex  src.tex  titlepage.tex
doc/Lab03/: .gitignore
doc/Lab03/src/: benchmark.tex  problem.tex  src.tex  thinks.tex  titlepage.tex
src/CP/CP/: makefile
src/GPU/CP/: CP.sln  convert_all_to_png.py  view_ppm.py
src/GPU/Lab01/: Lab01.sln  Lab01.vcxproj  kernel.cu
src/GPU/Lab02/: Lab02.sln  common_defines.cuh  common_structures.cuh  kernel.cu  os.cuh
src/GPU/Lab03/: Lab03.sln  Lab03.vcxproj  os.cu  (+5 more)
tools/CP/: convert_all.py  gif_conv.py
tools/Lab03/: .gitignore  builder.py  checker.py  conv.py
(+263 files in other folders)
